# ask

./: .gitignore  Ask.cabal  README.md  ask.cabal  cabal.project  cabal.project.freeze  default.nix  shell.nix
Src/: Main.hs
Src/Ask/: Bwd.hs  Context.hs  Glueing.hs  Hide.hs  OddEven.hs  Parsing.hs  Progging.hs  RawAsk.hs  Thin.hs  Tm.hs  Typing.hs
nix/: default.nix  nixpkgs.json  nixpkgs.nix  project.nix  release.nix  shell.nix  sources.json  update-nixpkgs.sh  update-project.sh
src/Ask/: ChkRaw.hs  HalfZip.hs  HardwiredRules.hs  Lexing.hs  Printing.hs  Proving.hs
