cabal-version:      2.4
name:               ask
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             zephyz
maintainer:         zephyz.zhaar@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable ask
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
                    , mtl
                    , containers
    hs-source-dirs:   src
    default-language: Haskell2010

library filth
    exposed-modules:  Ask.ChkRaw

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
                    , mtl
                    , containers
    hs-source-dirs:   src
    default-language: Haskell2010
