cabal-version:        2.4
name:                 ask
version:              0.0.0.0
synopsis:             being a particular fragment of Haskell, extended to a proof system
bug-reports:          https://github.com/msp-strath/ask/issues
license:              NONE
author:               Conor McBride <conor@strictlypositive.org>

extra-source-files:
    README.md

executable ask
    main-is:          Main.hs
    other-modules:    Ask.Bwd
                      Ask.ChkRaw
                      Ask.Context
                      Ask.Glueing
                      Ask.HalfZip
                      Ask.HardwiredRules
                      Ask.Hide
                      Ask.Lexing
                      Ask.OddEven
                      Ask.Parsing
                      Ask.Printing
                      Ask.Progging
                      Ask.Proving
                      Ask.RawAsk
                      Ask.Thin
                      Ask.Tm
                      Ask.Typing
    build-depends:    base
                    , mtl
                    , containers
    hs-source-dirs:   src
    default-language: Haskell2010

library
    exposed-modules:  Ask.ChkRaw
    other-modules:    Ask.Bwd
                      Ask.Context
                      Ask.Glueing
                      Ask.HalfZip
                      Ask.HardwiredRules
                      Ask.Hide
                      Ask.Lexing
                      Ask.OddEven
                      Ask.Parsing
                      Ask.Printing
                      Ask.Progging
                      Ask.Proving
                      Ask.RawAsk
                      Ask.Thin
                      Ask.Tm
                      Ask.Typing
    build-depends:    base
                    , mtl
                    , containers
    hs-source-dirs:   src
    default-language: Haskell2010
